cmake_minimum_required(VERSION 3.1)
project("lcc")
set(SRC_LIST)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS "-g -fmodules-ts -m64") 
include_directories(./include/ ./third-party/include/)
file(GLOB_RECURSE SRC_LIST ${PROJECT_SOURCE_DIR}/src/ "${PROJECT_SOURCE_DIR}/src/*.cpp" )
#add_library(lpp SHARED include/Token.ixx src/Token.cpp)
add_library(lpp STATIC ${SRC_LIST})
set(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH};./third-party/lib/cmake/llvm)
find_package(LLVM REQUIRED CONFIG)
#include_directories(./third-party/lib)
add_executable(test test.cpp)
target_link_libraries(lpp ${LLVM_AVAILABLE_LIBS})
target_link_libraries(test lpp ${LLVM_AVAILABLE_LIBS})
#target_link_libraries(lpp ${LLVM_AVAILABLE_LIBS})